v0.2.0/config/manifests/nifi-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi-ingress
  namespace: infometis
  labels:
    app: nifi
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /nifi
        pathType: Prefix
        backend:
          service:
            name: nifi-service
            port:
              number: 8080
